--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
